backends/drm: disable triple buffering on NVidia

Until we figure out what's wrong, it's best to leave it disabled

BUG: 487833